--- a/src/components/quickstart/Linux.astro
+++ b/src/components/quickstart/Linux.astro
@@ -14,6 +14,7 @@ const { latestVersion } = Astro.props
   <p class="text-gray-600 mb-16 dark:text-slate-400">
     We’ll install Docker and DDEV with your package manager, as detailed in the <a
       href="https://ddev.readthedocs.io/en/latest/users/install/ddev-installation/"
+      class="dark:text-white" 
       >Linux installation docs</a
     >.
   </p>
@@ -29,7 +30,9 @@ const { latestVersion } = Astro.props
         <p>
           Follow the <a
             href="https://docs.docker.com/engine/install/ubuntu/"
-            target="_blank">instructions on docs.docker.com</a
+            target="_blank"
+            class="dark:text-white"
+            >instructions on docs.docker.com</a
           >:
         </p>
         <Terminal
@@ -43,7 +46,9 @@ const { latestVersion } = Astro.props
         <p>
           Follow the <a
             href="https://docs.docker.com/engine/install/centos/"
-            target="_blank">instructions on docs.docker.com</a
+            target="_blank"
+            class="dark:text-white"
+            >instructions on docs.docker.com</a
           >:
         </p>
 
@@ -58,7 +63,9 @@ const { latestVersion } = Astro.props
         <p>
           Follow the <a
             href="https://docs.docker.com/engine/install/debian/"
-            target="_blank">instructions on docs.docker.com</a
+            target="_blank"
+            class="dark:text-white" 
+            >instructions on docs.docker.com</a
           >:
         </p>
 
@@ -73,7 +80,9 @@ const { latestVersion } = Astro.props
         <p>
           Follow the <a
             href="https://docs.docker.com/engine/install/fedora/"
-            target="_blank">instructions on docs.docker.com</a
+            target="_blank"
+            class="dark:text-white"
+            >instructions on docs.docker.com</a
           >:
         </p>
 
@@ -86,7 +95,7 @@ const { latestVersion } = Astro.props
   </Tabs>
 </div>
 
-<div class="prose">
+<div class="prose dark:text-slate-400">
   <h2 class="text-3xl mt-24 dark:text-white">
     <small class="block font-mono text-xs text-gray-500">2/3</small>Install DDEV
   </h2>
@@ -132,7 +141,7 @@ const { latestVersion } = Astro.props
   <Terminal type="ubuntu" code={`$ ddev -v\nddev version ${latestVersion}`} />
 </div>
 
-<div class="prose">
+<div class="prose dark:text-slate-400">
   <h2 class="text-3xl mt-24 dark:text-white">
     <small class="block font-mono text-xs text-gray-500">3/3</small>Create a
     Project
@@ -145,7 +154,8 @@ const { latestVersion } = Astro.props
     Initialize the project by running the <a
       href="https://ddev.readthedocs.io/en/latest/users/usage/commands/#config"
       target="_blank"
-      ><code>ddev config</code>
+      class="dark:text-white" 
+      ><code class="dark:text-white">ddev config</code>
     </a> command:
   </p>
   <Terminal type="ubuntu" code={`$ ddev config`} />
@@ -160,29 +170,34 @@ const { latestVersion } = Astro.props
     If it’s a Composer project, you may also need to run <a
       href="https://ddev.readthedocs.io/en/latest/users/usage/commands/#composer"
       target="_blank"
-      ><code>ddev composer install</code>
+      class="dark:text-white" 
+      ><code class="dark:text-white">ddev composer install</code>
     </a>.
   </p>
 
   <p>
     Now run the <a
       href="https://ddev.readthedocs.io/en/latest/users/usage/commands/#launch"
-      target="_blank">launch command</a
+      target="_blank"
+      class="dark:text-white" 
+      >launch command</a
     > to open your project in a browser:
   </p>
   <Terminal type="ubuntu" code={`$ ddev launch`} />
 </div>
 
-<div class="prose">
+<div class="prose dark:text-slate-400">
   <h2 class="text-3xl mt-24 dark:text-white">Explore & Enjoy!</h2>
 
   <p>
-    Take a peek at your project’s new <code>.ddev/</code> directory. You can add
-    this to your repo to share your DDEV config, edit <code
+    Take a peek at your project’s new <code class="dark:text-white">.ddev/</code> directory. You can add
+    this to your repo to share your DDEV config, edit <code class="dark:text-white"
       >.ddev/ddev.yaml</code
     > to change <a
       href="https://ddev.readthedocs.io/en/latest/users/configuration/config/"
-      target="_blank">project options</a
+      target="_blank"
+      class="dark:text-white"
+      >project options</a
     >, or even go about your business and pretend this folder doesn’t exist.
   </p>
 
@@ -190,8 +205,9 @@ const { latestVersion } = Astro.props
     Run the <a
       href="https://ddev.readthedocs.io/en/latest/users/usage/commands/#help"
       target="_blank"
+      class="dark:text-white"
       >help command
-    </a> (or plain <code>ddev</code>) to see the actions you can take with the
+    </a> (or plain <code class="dark:text-white">ddev</code>) to see the actions you can take with the
     CLI:
   </p>
 
@@ -201,6 +217,7 @@ const { latestVersion } = Astro.props
     Use the <a
       href="https://ddev.readthedocs.io/en/latest/users/usage/commands/#describe"
       target="_blank"
+      class="dark:text-white"
       >describe command
     </a> to see a project’s parts and database connection details:
   </p>
@@ -212,6 +229,7 @@ const { latestVersion } = Astro.props
     removing anything, use the <a
       href="https://ddev.readthedocs.io/en/latest/users/usage/commands/#stop"
       target="_blank"
+      class="dark:text-white"
       >stop command
     </a>:
   </p>
@@ -223,6 +241,7 @@ const { latestVersion } = Astro.props
     project and its resources without touching your code, run the <a
       href="https://ddev.readthedocs.io/en/latest/users/usage/commands/#delete"
       target="_blank"
+      class="dark:text-white"
       >delete command
     </a>:
   </p>
@@ -245,7 +264,7 @@ const { latestVersion } = Astro.props
   />
 
   <p>
-    Remove the <code>ddev</code> binary:
+    Remove the <code class="dark:text-white">ddev</code> binary:
   </p>
 
   <Terminal type="ubuntu" code={`$ sudo rm /usr/local/bin/ddev`} />
