--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -100,7 +100,7 @@ const releaseData = await getReleases()
               }</span
             >
             <span class="block font-mono text-sm">GitHub stars</span>
-            <div class="mt-2 prose">
+            <div class="mt-2  dark:text-slate-400">
               <figure>
                 <img
                   src="https://stars.medv.io/ddev/ddev.svg"
