--- a/src/pages/blog/[slug].astro
+++ b/src/pages/blog/[slug].astro
@@ -116,10 +116,10 @@ const blogPostSchema = [
         {
           entry.data.categories.length && (
             <>
-              <span class="font-mono text-sm block text-navy-300 tracking-wider">
+              <span class="font-mono text-sm block text-navy-300 tracking-wider dark:text-slate-500">
                 Posted In
               </span>
-              <ul class="mt-1">
+              <ul class="mt-1 dark:text-slate-400">
                 {entry.data.categories.map((category) => (
                   <li class="my-1">
                     <a href={getCategoryUrl(category)} class="font-bold">
