--- a/src/components/quickstart/CommunityCTA.astro
+++ b/src/components/quickstart/CommunityCTA.astro
@@ -1,7 +1,7 @@
-<div class="bg-gray-200 p-8 rounded-lg mt-36">
-  <h2 class="mt-0">Join the DDEV Community</h2>
-  <p class="mb-0">
+<div class="bg-gray-200 p-8 rounded-lg mt-36 dark:bg-slate-600">
+  <h2 class="mt-0 dark:text-white">Join the DDEV Community</h2>
+  <p class="mb-0 dark:text-slate-400">
     DDEV is an open source project with a growing community, and there are lots
-    of ways to <a href="/support-ddev">get involved</a>!
+    of ways to <a href="/support-ddev" class="dark:text-white">get involved</a>!
   </p>
 </div>
