--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -45,6 +45,13 @@ footer {
       }
     }
   }
+  .menu:where(.astro-3EF6KSR2){
+    @apply dark:bg-slate-800 dark:text-white;
+  }
+  .panel.active{
+    @apply dark:bg-slate-600;
+    box-shadow: none;
+  }
 }
 
 
