--- a/src/pages/support-ddev.astro
+++ b/src/pages/support-ddev.astro
@@ -24,7 +24,7 @@ const title = `Support DDEV`
     <Heading title={title} subtitle={`We’d love your help!`} />
 
     <div class="px-6 lg:px-0">
-      <div class="prose text-lg mt-0 mb-24 dark:text-slate-400">
+      <div class="prose text-lg mt-0 mb-24 dark:prose-invert">
         <p>
           DDEV exists because of the generosity of community members and
           sponsors.<br />
@@ -32,12 +32,12 @@ const title = `Support DDEV`
         </p>
       </div>
 
-      <div class="prose mt-12 dark:text-slate-400">
-        <h2 class="dark:text-white">File an Issue or PR</h2>
+      <div class="prose mt-12 dark:prose-invert">
+        <h2>File an Issue or PR</h2>
 
         <p>
           If you have an idea, a bug report, or code to contribute, please take
-          the time to <a class="dark:text-slate-400"
+          the time to <a
             href="https://github.com/ddev/ddev/blob/master/CONTRIBUTING.md"
             target="_blank">contribute</a
           > a GitHub Issue or Pull Request.
@@ -64,8 +64,8 @@ const title = `Support DDEV`
         />
       </div>
 
-      <div class="prose mt-12 dark:text-slate-400">
-        <h2 class="dark:text-white">Sponsor Development</h2>
+      <div class="prose mt-12 dark:prose-invert">
+        <h2>Sponsor Development</h2>
         <p>
           We’re grateful for our sponsors, and all contributions to the DDEV
           Foundation go entirely toward development. We can always use resources
@@ -87,8 +87,8 @@ const title = `Support DDEV`
         />
       </div>
 
-      <div class="prose mt-12 dark:text-slate-400">
-        <h2 class="dark:text-white">Help Others</h2>
+      <div class="prose mt-12 dark:prose-invert">
+        <h2>Help Others</h2>
         <p>
           There’s no shortage of questions on Discord, GitHub, and Stack
           Overflow. If you can help someone out, it helps us focus more on
@@ -116,8 +116,8 @@ const title = `Support DDEV`
         />
       </div>
 
-      <div class="prose mt-12 dark:text-slate-400">
-        <h2 class="dark:text-white">Improve the Docs</h2>
+      <div class="prose mt-12 dark:prose-invert">
+        <h2>Improve the Docs</h2>
         <p>
           It doesn’t matter whether you’ve found a typo, can wordsmith something
           to better explain or fit <a class="dark:text-slate-200"
@@ -139,7 +139,7 @@ const title = `Support DDEV`
             }}
           />
 
-          <figcaption class="dark:text-slate-400">
+          <figcaption>
             The edit icon in the published docs links to the relevant GitHub
             source for suggestions.
           </figcaption>
@@ -155,7 +155,7 @@ const title = `Support DDEV`
         />
       </div>
 
-      <div class="prose mt-12 dark:text-white">
+      <div class="prose mt-12 dark:prose-invert">
         <h2 class="dark:text-white">Spread the Word</h2>
         <p>
           If you like using DDEV, don’t keep it to yourself! Star the project <a
@@ -165,7 +165,7 @@ const title = `Support DDEV`
           video.
         </p>
 
-        <blockquote class="twitter-tweet dark:text-slate-400">
+        <blockquote class="twitter-tweet dark:prose-invert">
           <p lang="en" dir="ltr">
             <a class="dark:text-slate-200"
               href="https://twitter.com/hashtag/fedora?src=hash&ref_src=twsrc%5Etfw"
@@ -197,7 +197,7 @@ const title = `Support DDEV`
         />
       </div>
 
-      <div class="prose mt-12 dark:text-white">
+      <div class="prose mt-12 dark:prose-invert">
         <h2 class="dark:text-white">Join the Advisory Group</h2>
         <p>
           We meet regularly to discuss DDEV’s present and future. You’re welcome
