--- a/src/pages/blog/author/[slug].astro
+++ b/src/pages/blog/author/[slug].astro
@@ -41,7 +41,7 @@ const { Content } = await author.render()
   <main class="max-w-4xl mx-auto mb-24">
     <div class="lg:flex lg:space-x-12 py-24 px-6 lg:px-0">
       <h1 class="font-bold text-4xl dark:text-white">{author.data.name}</h1>
-      <div class="prose mt-6 lg:mt-0">
+      <div class="prose mt-6 lg:mt-0 dark:prose-invert">
         <Content />
       </div>
     </div>
