Updated darkmode settings part1.1.

--- a/src/components/quickstart/Linux.astro
+++ b/src/components/quickstart/Linux.astro
@@ -10,11 +10,10 @@ export interface Props {
 const { latestVersion } = Astro.props
 ---
 
-<div class="prose dark:text-slate-400">
+<div class="prose dark:prose-invert">
   <p class="text-gray-600 mb-16 dark:text-slate-400">
     We’ll install Docker and DDEV with your package manager, as detailed in the <a
       href="https://ddev.readthedocs.io/en/latest/users/install/ddev-installation/"
-      class="dark:text-white" 
       >Linux installation docs</a
     >.
   </p>
@@ -26,12 +25,11 @@ const { latestVersion } = Astro.props
 
   <Tabs order={["Ubuntu", "CentOS", "Debian", "Fedora"]}>
     <Fragment slot="Ubuntu">
-      <div class="prose py-5 dark:text-slate-400">
+      <div class="prose py-5 dark:prose-invert">
         <p>
           Follow the <a
             href="https://docs.docker.com/engine/install/ubuntu/"
             target="_blank"
-            class="dark:text-white"
             >instructions on docs.docker.com</a
           >:
         </p>
@@ -42,12 +40,11 @@ const { latestVersion } = Astro.props
       </div>
     </Fragment>
     <Fragment slot="CentOS">
-      <div class="prose py-5 dark:text-slate-400">
+      <div class="prose py-5 dark:prose-invert">
         <p>
           Follow the <a
             href="https://docs.docker.com/engine/install/centos/"
             target="_blank"
-            class="dark:text-white"
             >instructions on docs.docker.com</a
           >:
         </p>
@@ -59,12 +56,11 @@ const { latestVersion } = Astro.props
       </div>
     </Fragment>
     <Fragment slot="Debian">
-      <div class="prose py-5 dark:text-slate-400">
+      <div class="prose py-5 dark:prose-invert">
         <p>
           Follow the <a
             href="https://docs.docker.com/engine/install/debian/"
-            target="_blank"
-            class="dark:text-white" 
+            target="_blank" 
             >instructions on docs.docker.com</a
           >:
         </p>
@@ -76,12 +72,11 @@ const { latestVersion } = Astro.props
       </div>
     </Fragment>
     <Fragment slot="Fedora">
-      <div class="prose py-5 dark:text-slate-400">
+      <div class="prose py-5 dark:prose-invert">
         <p>
           Follow the <a
             href="https://docs.docker.com/engine/install/fedora/"
             target="_blank"
-            class="dark:text-white"
             >instructions on docs.docker.com</a
           >:
         </p>
@@ -95,14 +90,14 @@ const { latestVersion } = Astro.props
   </Tabs>
 </div>
 
-<div class="prose dark:text-slate-400">
+<div class="prose dark:prose-invert">
   <h2 class="text-3xl mt-24 dark:text-white">
     <small class="block font-mono text-xs text-gray-500">2/3</small>Install DDEV
   </h2>
 
   <Tabs order={["Ubuntu", "CentOS", "Debian", "Fedora"]}>
     <Fragment slot="Ubuntu">
-      <div class="prose py-5 dark:text-slate-400">
+      <div class="prose py-5 dark:prose-invert">
         <Terminal
           type="ubuntu"
           code={`$ curl -fsSL https://pkg.ddev.com/apt/gpg.key | gpg --dearmor | sudo tee /etc/apt/trusted.gpg.d/ddev.gpg > /dev/null\n$ echo "deb [signed-by=/etc/apt/trusted.gpg.d/ddev.gpg] https://pkg.ddev.com/apt/ * *" | sudo tee /etc/apt/sources.list.d/ddev.list\n$ sudo apt update && sudo apt install -y ddev
@@ -111,7 +106,7 @@ const { latestVersion } = Astro.props
       </div>
     </Fragment>
     <Fragment slot="CentOS">
-      <div class="prose py-5 dark:text-slate-400">
+      <div class="prose py-5 dark:prose-invert">
         <Terminal
           type="ubuntu"
           code={`$ echo '[ddev]\nname=DDEV Repo\nbaseurl=https://pkg.ddev.com/yum/\nenabled=1\ngpgcheck=0' | sudo tee -a /etc/yum.repos.d/ddev.repo\n$ sudo dnf install --refresh ddev`}
@@ -119,7 +114,7 @@ const { latestVersion } = Astro.props
       </div>
     </Fragment>
     <Fragment slot="Debian">
-      <div class="prose py-5 dark:text-slate-400">
+      <div class="prose py-5 dark:prose-invert">
         <Terminal
           type="ubuntu"
           code={`$ curl -fsSL https://pkg.ddev.com/apt/gpg.key | gpg --dearmor | sudo tee /etc/apt/trusted.gpg.d/ddev.gpg > /dev/null\n$ echo "deb [signed-by=/etc/apt/trusted.gpg.d/ddev.gpg] https://pkg.ddev.com/apt/ * *" | sudo tee /etc/apt/sources.list.d/ddev.list\n$ sudo apt update && sudo apt install -y ddev
@@ -128,7 +123,7 @@ const { latestVersion } = Astro.props
       </div>
     </Fragment>
     <Fragment slot="Fedora">
-      <div class="prose py-5 dark:text-slate-400">
+      <div class="prose py-5 dark:prose-invert">
         <Terminal
           type="ubuntu"
           code={`$ echo '[ddev]\nname=DDEV Repo\nbaseurl=https://pkg.ddev.com/yum/\nenabled=1\ngpgcheck=0' | sudo tee -a /etc/yum.repos.d/ddev.repo\n$ sudo dnf install --refresh ddev`}
@@ -141,7 +136,7 @@ const { latestVersion } = Astro.props
   <Terminal type="ubuntu" code={`$ ddev -v\nddev version ${latestVersion}`} />
 </div>
 
-<div class="prose dark:text-slate-400">
+<div class="prose dark:prose-invert">
   <h2 class="text-3xl mt-24 dark:text-white">
     <small class="block font-mono text-xs text-gray-500">3/3</small>Create a
     Project
@@ -154,8 +149,7 @@ const { latestVersion } = Astro.props
     Initialize the project by running the <a
       href="https://ddev.readthedocs.io/en/latest/users/usage/commands/#config"
       target="_blank"
-      class="dark:text-white" 
-      ><code class="dark:text-white">ddev config</code>
+      ><code>ddev config</code>
     </a> command:
   </p>
   <Terminal type="ubuntu" code={`$ ddev config`} />
@@ -169,34 +163,31 @@ const { latestVersion } = Astro.props
   <p>
     If it’s a Composer project, you may also need to run <a
       href="https://ddev.readthedocs.io/en/latest/users/usage/commands/#composer"
-      target="_blank"
-      class="dark:text-white" 
-      ><code class="dark:text-white">ddev composer install</code>
+      target="_blank" 
+      ><code>ddev composer install</code>
     </a>.
   </p>
 
   <p>
     Now run the <a
       href="https://ddev.readthedocs.io/en/latest/users/usage/commands/#launch"
-      target="_blank"
-      class="dark:text-white" 
+      target="_blank" 
       >launch command</a
     > to open your project in a browser:
   </p>
   <Terminal type="ubuntu" code={`$ ddev launch`} />
 </div>
 
-<div class="prose dark:text-slate-400">
+<div class="prose dark:prose-invert">
   <h2 class="text-3xl mt-24 dark:text-white">Explore & Enjoy!</h2>
 
   <p>
-    Take a peek at your project’s new <code class="dark:text-white">.ddev/</code> directory. You can add
-    this to your repo to share your DDEV config, edit <code class="dark:text-white"
+    Take a peek at your project’s new <code>.ddev/</code> directory. You can add
+    this to your repo to share your DDEV config, edit <code
       >.ddev/ddev.yaml</code
     > to change <a
       href="https://ddev.readthedocs.io/en/latest/users/configuration/config/"
       target="_blank"
-      class="dark:text-white"
       >project options</a
     >, or even go about your business and pretend this folder doesn’t exist.
   </p>
@@ -205,9 +196,8 @@ const { latestVersion } = Astro.props
     Run the <a
       href="https://ddev.readthedocs.io/en/latest/users/usage/commands/#help"
       target="_blank"
-      class="dark:text-white"
       >help command
-    </a> (or plain <code class="dark:text-white">ddev</code>) to see the actions you can take with the
+    </a> (or plain <code>ddev</code>) to see the actions you can take with the
     CLI:
   </p>
 
@@ -217,7 +207,6 @@ const { latestVersion } = Astro.props
     Use the <a
       href="https://ddev.readthedocs.io/en/latest/users/usage/commands/#describe"
       target="_blank"
-      class="dark:text-white"
       >describe command
     </a> to see a project’s parts and database connection details:
   </p>
@@ -229,7 +218,6 @@ const { latestVersion } = Astro.props
     removing anything, use the <a
       href="https://ddev.readthedocs.io/en/latest/users/usage/commands/#stop"
       target="_blank"
-      class="dark:text-white"
       >stop command
     </a>:
   </p>
@@ -241,7 +229,6 @@ const { latestVersion } = Astro.props
     project and its resources without touching your code, run the <a
       href="https://ddev.readthedocs.io/en/latest/users/usage/commands/#delete"
       target="_blank"
-      class="dark:text-white"
       >delete command
     </a>:
   </p>
@@ -264,7 +251,7 @@ const { latestVersion } = Astro.props
   />
 
   <p>
-    Remove the <code class="dark:text-white">ddev</code> binary:
+    Remove the <code>ddev</code> binary:
   </p>
 
   <Terminal type="ubuntu" code={`$ sudo rm /usr/local/bin/ddev`} />
