--- a/src/pages/support-ddev.astro
+++ b/src/pages/support-ddev.astro
@@ -156,7 +156,7 @@ const title = `Support DDEV`
       </div>
 
       <div class="prose mt-12 dark:prose-invert">
-        <h2 class="dark:text-white">Spread the Word</h2>
+        <h2>Spread the Word</h2>
         <p>
           If you like using DDEV, don’t keep it to yourself! Star the project <a
             href={GITHUB_URL}
@@ -198,7 +198,7 @@ const title = `Support DDEV`
       </div>
 
       <div class="prose mt-12 dark:prose-invert">
-        <h2 class="dark:text-white">Join the Advisory Group</h2>
+        <h2>Join the Advisory Group</h2>
         <p>
           We meet regularly to discuss DDEV’s present and future. You’re welcome
           to join us!
