--- a/src/components/quickstart/Cloud.astro
+++ b/src/components/quickstart/Cloud.astro
@@ -12,7 +12,7 @@ const { latestVersion } = Astro.props
 ---
 
 <div class="prose dark:prose-invert">
-  <h2 class="text-3xl mt-24 dark:text-white">
+  <h2 class="text-3xl mt-24">
     <small class="block font-mono text-xs text-gray-500">1/2</small>Launch a
     Provider &amp; Install DDEV
   </h2>
@@ -67,7 +67,6 @@ const { latestVersion } = Astro.props
       </div>
       <a
         href="https://github.com/codespaces/new?hide_repo_select=true&ref=20221220_codespaces&repo=80927419&machine=basicLinux32gb&location=WestUs2"
-        class="dark:text-white"
         ><img
           src="https://github.com/codespaces/badge.svg"
           alt="Open in GitHub Codespaces"
@@ -91,8 +90,7 @@ const { latestVersion } = Astro.props
     Initialize the DDEV project by running the <a
       href="https://ddev.readthedocs.io/en/latest/users/usage/commands/#config"
       target="_blank"
-      class="dark:text-white"
-      ><code class="dark:text-white">ddev config</code>
+      ><code>ddev config</code>
     </a> command:
   </p>
   <Terminal code={`→ ddev config`} />
@@ -107,8 +105,7 @@ const { latestVersion } = Astro.props
     If it’s a Composer project, you may also need to run <a
       href="https://ddev.readthedocs.io/en/latest/users/usage/commands/#composer"
       target="_blank"
-      class="dark:text-white"
-      ><code class="dark:text-white">ddev composer install</code>
+      ><code>ddev composer install</code>
     </a>.
   </p>
 
@@ -116,7 +113,6 @@ const { latestVersion } = Astro.props
     Now run the <a
       href="https://ddev.readthedocs.io/en/latest/users/usage/commands/#launch"
       target="_blank"
-      class="dark:text-white"
       >launch command</a
     > to open your project in a browser:
   </p>
@@ -127,13 +123,11 @@ const { latestVersion } = Astro.props
   <h2 class="text-3xl mt-24 dark:text-white">Explore & Enjoy!</h2>
 
   <p>
-    Take a peek at your project’s new <code class="dark:text-white">.ddev/</code> directory. You can add
-    this to your repo to share your DDEV config, edit <code class="dark:text-white"
-      >.ddev/ddev.yaml</code
-    > to change <a
+    Take a peek at your project’s new <code>.ddev/</code> directory. You can add
+    this to your repo to share your DDEV config, edit <code>.ddev/ddev.yaml</code> to change <a
       href="https://ddev.readthedocs.io/en/latest/users/configuration/config/"
       target="_blank"
-      class="dark:text-white"
+      
       >project options</a
     >, or even go about your business and pretend this folder doesn’t exist.
   </p>
@@ -142,9 +136,8 @@ const { latestVersion } = Astro.props
     Run the <a
       href="https://ddev.readthedocs.io/en/latest/users/usage/commands/#help"
       target="_blank"
-      class="dark:text-white"
       >help command
-    </a> (or plain <code class="dark:text-white">ddev</code>) to see the actions you can take with the
+    </a> (or plain <code>ddev</code>) to see the actions you can take with the
     CLI:
   </p>
 
@@ -154,7 +147,6 @@ const { latestVersion } = Astro.props
     Use the <a
       href="https://ddev.readthedocs.io/en/latest/users/usage/commands/#describe"
       target="_blank"
-      class="dark:text-white"
       >describe command
     </a> to see a project’s parts and database connection details:
   </p>
@@ -166,7 +158,6 @@ const { latestVersion } = Astro.props
     removing anything, use the <a
       href="https://ddev.readthedocs.io/en/latest/users/usage/commands/#stop"
       target="_blank"
-      class="dark:text-white"
       >stop command
     </a>:
   </p>
@@ -178,7 +169,6 @@ const { latestVersion } = Astro.props
     project and its resources without touching your code, run the <a
       href="https://ddev.readthedocs.io/en/latest/users/usage/commands/#delete"
       target="_blank"
-      class="dark:text-white"
       >delete command
     </a>:
   </p>
