--- a/src/components/quickstart/Mac.astro
+++ b/src/components/quickstart/Mac.astro
@@ -10,9 +10,9 @@ export interface Props {
 const { latestVersion } = Astro.props
 ---
 
-<div class="prose dark:text-slate-400">
+<div class="prose dark:prose-invert">
   <p class="text-gray-600 mb-16 dark:text-slate-400">
-    We’ll use Docker Desktop since it’s the most straightforward of <a class="dark:text-slate-200"
+    We’ll use Docker Desktop since it’s the most straightforward of <a
       href="https://ddev.readthedocs.io/en/latest/users/install/docker-installation/#macos"
       >several options</a
     >.
@@ -26,20 +26,19 @@ const { latestVersion } = Astro.props
 
 <Tabs order={["Homebrew", "Download"]}>
   <Fragment slot="Homebrew">
-    <div class="prose py-5 dark:text-slate-400">
+    <div class="prose py-5 dark:prose-invert">
       <p>
-        With <a href="https://brew.sh" class="dark:text-white" target="_blank">Homebrew</a> installed, you
+        With <a href="https://brew.sh" target="_blank">Homebrew</a> installed, you
         can install Docker Desktop with one command:
       </p>
       <Terminal code={`→ brew install --cask docker`} />
     </div>
   </Fragment>
   <Fragment slot="Download">
-    <div class="prose py-5 dark:text-slate-400">
+    <div class="prose py-5 dark:prose-invert">
       <p>
         Download and run the <a
           href="https://www.docker.com/products/docker-desktop"
-          class="dark:text-white"
           target="_blank">Docker Desktop installer</a
         >.
       </p>
@@ -47,7 +46,7 @@ const { latestVersion } = Astro.props
   </Fragment>
 </Tabs>
 
-<div class="prose dark:text-slate-400">
+<div class="prose dark:prose-invert">
   <p>
     Launch Docker Desktop, accept the license agreement, and make sure Docker is
     started and running.
@@ -63,12 +62,12 @@ const { latestVersion } = Astro.props
 
 <Tabs order={["Homebrew", "Install Script"]}>
   <Fragment slot="Homebrew">
-    <div class="prose py-5 dark:text-slate-400">
+    <div class="prose py-5 dark:prose-invert">
       <Terminal code={`→ brew install ddev/ddev/ddev`} />
     </div>
   </Fragment>
   <Fragment slot="Install Script">
-    <div class="prose py-5 dark:text-slate-400">
+    <div class="prose py-5 dark:prose-invert">
       <Terminal
         code={`→ curl -fsSL https://ddev.com/install.sh | bash`}
       />
@@ -76,7 +75,7 @@ const { latestVersion } = Astro.props
   </Fragment>
 </Tabs>
 
-<div class="prose dark:text-slate-400">
+<div class="prose dark:prose-invert">
   <p>Confirm that you’ve now got DDEV installed: 🎉</p>
   <Terminal code={`→ ddev -v\nddev version ${latestVersion}`} />
 
@@ -92,7 +91,7 @@ const { latestVersion } = Astro.props
     Initialize the project by running the <a
       href="https://ddev.readthedocs.io/en/latest/users/usage/commands/#config"
       target="_blank"
-      ><code class="dark:text-white">ddev config</code>
+      ><code>ddev config</code>
     </a> command:
   </p>
   <Terminal code={`→ ddev config`} />
@@ -107,31 +106,30 @@ const { latestVersion } = Astro.props
     If it’s a Composer project, you may also need to run <a
       href="https://ddev.readthedocs.io/en/latest/users/usage/commands/#composer"
       target="_blank"
-      ><code class="dark:text-white">ddev composer install</code>
+      ><code>ddev composer install</code>
     </a>.
   </p>
 
   <p>
     Now run the <a
       href="https://ddev.readthedocs.io/en/latest/users/usage/commands/#launch"
-      class="dark:text-white"
       target="_blank">launch command</a
     > to open your project in a browser:
   </p>
   <Terminal code={`→ ddev launch`} />
 </div>
 
-<div class="prose dark:text-slate-400">
+<div class="prose dark:prose-invert">
   <h2 class="text-3xl mt-24 dark:text-white">Explore & Enjoy!</h2>
 
   <p>
-    Take a peek at your project’s new <code class="dark:text-white">.ddev/</code> directory. You can add
-    this to your repo to share your DDEV config, edit <code class="dark:text-white"
+    Take a peek at your project’s new <code>.ddev/</code> directory. You can add
+    this to your repo to share your DDEV config, edit <code
       >.ddev/ddev.yaml</code
     > to change <a
       href="https://ddev.readthedocs.io/en/latest/users/configuration/config/"
       target="_blank"
-      class="dark:text-white">project options</a
+      >project options</a
     >, or even go about your business and pretend this folder doesn’t exist.
   </p>
 
@@ -139,9 +137,8 @@ const { latestVersion } = Astro.props
     Run the <a
       href="https://ddev.readthedocs.io/en/latest/users/usage/commands/#help"
       target="_blank"
-      class="dark:text-white"
       >help command
-    </a> (or plain <code class="dark:text-white">ddev</code>) to see the actions you can take with the
+    </a> (or plain <code>ddev</code>) to see the actions you can take with the
     CLI:
   </p>
 
@@ -151,7 +148,6 @@ const { latestVersion } = Astro.props
     Use the <a
       href="https://ddev.readthedocs.io/en/latest/users/usage/commands/#describe"
       target="_blank"
-      class="dark:text-white"
       >describe command
     </a> to see a project’s parts and database connection details:
   </p>
@@ -163,7 +159,6 @@ const { latestVersion } = Astro.props
     removing anything, use the <a
       href="https://ddev.readthedocs.io/en/latest/users/usage/commands/#stop"
       target="_blank"
-      class="dark:text-white"
       >stop command
     </a>:
   </p>
@@ -175,7 +170,6 @@ const { latestVersion } = Astro.props
     project and its resources without touching your code, run the <a
       href="https://ddev.readthedocs.io/en/latest/users/usage/commands/#delete"
       target="_blank"
-      class="dark:text-white"
       >delete command
     </a>:
   </p>
@@ -197,17 +191,17 @@ const { latestVersion } = Astro.props
   />
 
   <p>
-    Then remove the <code class="dark:text-white">ddev</code> binary however you installed it:
+    Then remove the <codes>ddev</code> binary however you installed it:
   </p>
 
   <Tabs order={["Homebrew", "Install Script"]}>
     <Fragment slot="Homebrew">
-      <div class="prose py-5 dark:text-slate-400">
+      <div class="prose py-5 dark:prose-invert">
         <Terminal code={`→ brew uninstall ddev`} />
       </div>
     </Fragment>
     <Fragment slot="Install Script">
-      <div class="prose py-5 dark:text-slate-400">
+      <div class="prose py-5 dark:prose-invert">
         <Terminal code={`→ rm /usr/local/bin/ddev`} />
       </div>
     </Fragment>
