Updated darkmode settings 1.3

--- a/src/components/BlogPostFooter.astro
+++ b/src/components/BlogPostFooter.astro
@@ -51,7 +51,7 @@ orderedPosts.forEach((post, index) => {
       <a
         href={`/blog/${next.slug}`}
         rel="prefetch"
-        class="flex border items-center rounded-md w-full my-1 md:my-0 content-center justify-start md:justify-end md:text-right p-4 hover:border-blue-300 hover:shadow-sm dark:text-slate-400"
+        class="flex border items-center rounded-md w-full my-1 md:my-0 content-center justify-start md:justify-end md:text-right p-4 hover:border-blue-300 hover:shadow-sm dark:border-slate-700"
         title={`Next: ${next.data.title}`}
       >
         <div>
