--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -52,7 +52,7 @@ const navigation = {
 }
 ---
 
-<footer class="dark:bg-slate-900">
+<footer class="dark:bg-transparent">
   <div class="max-w-4xl mx-auto py-12 px-6 lg:px-0 lg:py-16">
     <div class="pb-8 xl:grid xl:grid-cols-3 xl:gap-8">
       <div class="grid grid-cols-auto gap-8 xl:col-span-4">
@@ -113,7 +113,7 @@ const navigation = {
       </div>
     </div>
     <div
-      class="mt-8 border-t border-gray-300 pt-8 md:flex md:items-center md:justify-between"
+      class="mt-8 border-t border-gray-300 pt-8 md:flex md:items-center md:justify-between dark:border-slate-700"
     >
       <div
         class="flex space-x-6 md:order-2 items-center justify-center content-center"
