--- a/src/pages/newsletter.astro
+++ b/src/pages/newsletter.astro
@@ -20,8 +20,9 @@ const title = `Newsletter`
   <main class="max-w-4xl mx-auto mb-24">
     <Heading title={`Sign up for our newsletter`} />
 
+    <div class="prose dark:prose-invert my-8">
     This is a low-volume newsletter, usually just once a month. We'd love to be able to keep in touch with you.
-
+    </div>
     <!-- NEW FORM GOES BELOW HERE -->
 
     <script id='formScript5879720000000512037' src='https://crm.zoho.com/crm/WebFormServeServlet?rid=d761f49b3421baca337046aa6e88b357c00ca36d6d951c2b6cd512fb5452c9edgide888d842d2182432c1bf117aecd6280f1bf0b73e665551779217573985104582&script=$sYG'></script>
