--- a/src/components/CtaButton.astro
+++ b/src/components/CtaButton.astro
@@ -8,7 +8,7 @@ export interface Props {
 
 const typeClasses = {
   default: `border border-transparent text-white bg-blue-650 hover:bg-blue-800`,
-  hollow: `border border-blue-650 text-blue-650 hover:border-blue-800 hover:text-blue-800`,
+  hollow: `border border-blue-650 text-blue-650 hover:border-blue-800 hover:text-blue-800 dark:hover:text-blue-500 hover:border-blue-500`,
 }
 
 const { text, href, type = "default", target } = Astro.props
