--- a/src/components/PlatformPicker.astro
+++ b/src/components/PlatformPicker.astro
@@ -125,7 +125,7 @@ const { heading, inputName = "platform" } = Astro.props
         class="hidden"
       />
       <label
-        class="block w-full text-center border-y border-l rounded-l py-4 select-none cursor-pointer"
+        class="block w-full text-center border-y border-l rounded-l py-4 select-none cursor-pointer dark:border-slate-700"
         for="platform-mac"
       >
         <span class="hidden md:inline-block w-4 h-4 relative" style="top: 2px"
@@ -143,7 +143,7 @@ const { heading, inputName = "platform" } = Astro.props
         class="hidden"
       />
       <label
-        class="block w-full text-center border-y border-l py-4 select-none cursor-pointer"
+        class="block w-full text-center border-y border-l py-4 select-none cursor-pointer dark:border-slate-700"
         for="platform-windows"
       >
         <span class="hidden md:inline-block w-4 h-4 relative" style="top: 2px"
@@ -161,7 +161,7 @@ const { heading, inputName = "platform" } = Astro.props
         class="hidden"
       />
       <label
-        class="block w-full text-center border-y border-l py-4 select-none cursor-pointer"
+        class="block w-full text-center border-y border-l py-4 select-none cursor-pointer dark:border-slate-700"
         for="platform-linux"
       >
         <span class="hidden md:inline-block w-4 h-4 relative" style="top: 2px"
@@ -180,7 +180,7 @@ const { heading, inputName = "platform" } = Astro.props
         class="hidden"
       />
       <label
-        class="block w-full text-center border-y border-x rounded-r py-4 select-none cursor-pointer"
+        class="block w-full text-center border-y border-x rounded-r py-4 select-none cursor-pointer dark:border-slate-700"
         for="platform-cloud"
       >
         <span class="hidden md:inline-block w-4 h-4 relative" style="top: 2px"
