--- a/src/components/RepoCard.astro
+++ b/src/components/RepoCard.astro
@@ -18,10 +18,10 @@ const repoData = await getRepoDetails(name)
 
 <a
   href={`https://github.com/${name}`}
-  class="border hover:border-blue-300 rounded-md shadow-sm hover:shadow-lg"
+  class="border hover:border-blue-300 rounded-md shadow-sm hover:shadow-lg dark:border-slate-700"
 >
   <div class="">
-    <div class="flex justify-between border-b px-3 py-3">
+    <div class="flex justify-between border-b px-3 py-3 dark:border-slate-700">
       <h3 class="text-base font-bold">{name}</h3>
       <div class="font-mono text-sm" style="margin-top: 2px">
         <StarIcon
